simple visualization make with a React

--- a/visulization/package.json
+++ b/visulization/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-app",
+  "name": "visulization",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-native-pathjs-charts": "^0.0.34",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
